nivasa-macros/tests/trybuild/validation_min_length_invalid.stderr
error: expected `#[min_length(<usize>)]`
 --> tests/trybuild/validation_min_length_invalid.rs:5:5
  |
5 |     #[min_length]
  |     ^
