nivasa-macros/tests/trybuild/validation_min_length_invalid.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct SignupForm {
    #[min_length]
    password: String,
}

fn main() {}
